entity change, dynamic workload added